# ocasino

./: .coverage  .env  README.md  TESTSM0424.md  TEST_SUMMARY.md  TEST_SUMMARY2.md  alembic.ini  check_path.py  docker-compose.yml  main.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: __init__.py
api/: api.py
api/dependencies/: __init__.py  auth.py  common.py  db.py  i18n.py  rate_limit.py
api/errors/: exceptions.py  handlers.py
api/middlewares/: __init__.py
api/routers/: aml.py  auth.py  games.py  partners.py  reports.py  wallet.py
b2b_casino_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/: i18n.py  main.py
backend/alembic/: script.py.mako
backend/api/: __init__.py  api.py
backend/app/: base.py  exceptions.py  lifespan.py  middlewares.py  openapi.py
backend/auth/: api.py  dependencies.py
backend/cache/: memory_cache.py  redis_cache.py
backend/core/: auth.py  config.py  dependencies.py  exceptions.py  logging.py  rate_limit.py  repository.py  schemas.py  security.py  service.py
backend/db/: __init__.py  database.py  functions.py  types.py
backend/domain_events/: __init__.py  events.py  handlers.py  registry.py
backend/games/: api.py  dependencies.py
backend/health/: api.py
backend/middlewares/: audit_log.py  auth_middleware.py  error_handling_middleware.py  ip_whitelist.py  rate_limit_middleware.py  request_validation.py  resource_limiter.py  tracing.py
backend/models/: aml.py  enums.py
backend/partners/: __init__.py  api.py  dependencies.py  models.py  repository.py  schemas.py  service.py
backend/reports/: api.py
cache/: __init__.py  redis_cache.py
core/: __init__.py  config.py  rate_limit.py  security.py
db/: database.py
docs/: CHANGELOG.md  index.html
domain_events/: __init__.py  events.py  handlers.py
middlewares/: audit_log.py  auth_middleware.py  error_handling_middleware.py  ip_whitelist.py  rate_limit_middleware.py
migrations/: env.py
models/: __init__.py
scripts/: manage_partitions.py  performance_test.py  run.sh  test.sh
tests/: conftest.py
(+111 files in other folders)
